kagent needed for kitchen

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -22,6 +22,7 @@ suites:
 suites:
   - name: default
     run_list:
+      - recipe[kagent::install]
       - recipe[hadoop::install]
       - recipe[spark::install]
       - recipe[adam::install]
@@ -51,6 +52,8 @@ suites:
          adam:
             private_ips: ["10.0.2.15"]
             public_ips: ["10.0.2.15"]
+         kagent:
+            private_ips: ["10.0.2.15"]
          private_ips: ["10.0.2.15"]
          public_ips: ["10.0.2.15"]
          vagrant: "enabled"
